--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "lottie-react": "^2.4.0",
-    "next": "^13.4.3",
+    "next": "13.1.6",
     "next-images": "^1.8.4",
     "pdfjs-dist": "^2.16.105",
     "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-sticky-box": "^2.0.0",
     "swiper": "^9.0.5"
   },
