--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-router-dom": "^6.11.2",
     "react-scroll-horizontal": "^1.6.6",
     "react-simple-image-slider": "^2.4.1",
     "react-sticky-box": "^2.0.0",
